--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <h1>Thank you for your purchase! 🎉</h1>
   <p>You can now open the tool using the button below:</p>
-  <a href="https://kleinelars.github.io/KLKahoot/" class="button" target="_blank">Open the Tool</a>
+  <a href="https://github.com/KleineLars/quizlet" class="button" target="_blank">Open the Tool</a>
 
   <p>Or go back to the homepage:</p>
   <a href="https://kleinelars.github.io/KleineLarsTools/" class="button">Back to Homepage</a>
